using Cysharp.Threading.Tasks;
using System;
using System.Collections;
using System.Collections.Generic;
using System.Threading;
using UniRx;
using UnityEngine;
using VContainer.Unity;

namespace Game.Enemies
{
    public class EnemyAI : IEnemyInput, IDisposable
    {
        public Vector2 MoveVec { get; } = Vector2.down;

        private Subject<bool> pushedFireSubject = new Subject<bool>();
        public IObservable<bool> PushedFire => pushedFireSubject.AsObservable();

        private readonly CancellationTokenSource tokenSource= new CancellationTokenSource();

        public EnemyAI()
        {
            PushedFireAsync(tokenSource.Token).Forget();
        }

        private async UniTask PushedFireAsync(CancellationToken token)
        {
            await UniTask.Delay(TimeSpan.FromSeconds(1f), cancellationToken: token);
            while (true)
            {
                pushedFireSubject.OnNext(true);
                await UniTask.Delay(TimeSpan.FromSeconds(0.8f), cancellationToken: token);
                pushedFireSubject.OnNext(true);
                await UniTask.Delay(TimeSpan.FromSeconds(2.4f), cancellationToken: token);
            }
        }

        public void Dispose()
        {
            pushedFireSubject.Dispose();
            tokenSource.Cancel();
        }
    }
}
