using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public interface IEnemyAnimation
{
    public void PlayDieAnimation();
}
