using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public interface IPlayerShooter
{
    public void Shot();
}
